hero/k8s/auth/auth-deployments.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: auth
spec:
  paused: true
  template:
    metadata:
      labels:
        app: surging-hero
        component: auth
    spec:
      imagePullSecrets:
      - name: registry-key
      containers:
      - name: auth
        image: surgingcloud/surging.hero.auth
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http-port
        - containerPort: 100
          name: rpc-port
