hero/k8s/auth/auth-services.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: surging-hero
    component: auth
  name: auth
spec:
  ports:
  - name: "http-port"
    port: 8080
    targetPort: 8080
    protocol: TCP  
  - name: "rpc-port"
    port: 100
    targetPort: 100
    protocol: TCP  
  selector:
    app: surging-hero
    component: auth
