hero/k8s/auth/auth-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: surging-hero
    component: frontend
  name: auth-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: auth.surginghero.com
    http:
      paths:
      - path: /
        backend:
          serviceName: auth
          servicePort: 8080
